[gd_scene load_steps=9 format=2]

[ext_resource path="res://Action RPG/Action RPG Resources/World/ArmsandLegsBackgroundSpritesheet.png" type="Texture" id=1]
[ext_resource path="res://Door2.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 192, 7, 16, 25 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 208, 7, 16, 25 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 224, 7, 16, 25 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 240, 7, 16, 25 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 6, 6 )

[node name="DoorV2" type="Node2D"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -8.0
margin_top = -12.0
margin_right = 8.0
margin_bottom = 10.0
color = Color( 0, 0, 0, 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 6 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 6
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 14 )
shape = SubResource( 7 )

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = -8.0
margin_top = -12.0
margin_right = 8.0
margin_bottom = -10.0
color = Color( 1, 0.560784, 0, 1 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
